TIKA-4884: retire the image/ocr-* pseudo-types